# Test

./: .gitmodules  CMakeLists.txt
cpp/: CMakeLists.txt
cpp/feature/: CMakeLists.txt  main.cc
qt/: CMakeLists.txt  action_dispatcher.cc  action_dispatcher.h  main.cc  ui.rcc
qt/ui/: test.qml
